--- a/Styles/Index.css
+++ b/Styles/Index.css
@@ -78,10 +78,6 @@ h4 {
   color: white;
 }
 
-.hero-gallery {
-  height: 100%;
-}
-
 .hero-identity {
   padding-right: 5vw;
   padding-bottom: 23vh;
@@ -145,14 +141,53 @@ footer {
   font-weight: 1000;
 }
 
+/*IMAGES*/
+
 .hero-banner {
   background-image: url("../Images/pexels-pixabay-270348.jpg");
   background-size: cover;
   background-position: right;
 }
 
+.hero-photo {
+  height: 100%;
+}
+
+/*RESPONSIVE DESIGN: MEDIA QUERIES*/
+
 @media screen and (max-width: 980px) {
 }
 
 @media screen and (max-width: 768px) {
+  html {
+    scroll-padding-top: 20vh;
+  }
+
+  .wrapper {
+    padding-top: 20vh;
+  }
+
+  header {
+    height: 30vh;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+  }
+
+  .navigationbar {
+    font-size: 2rem;
+    font-weight: 700;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  nav a {
+    padding: 0.5vh 0rem;
+  }
 }
