--- a/Styles/Index.css
+++ b/Styles/Index.css
@@ -9,7 +9,7 @@ html {
 
 body {
   color: black;
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin: 0;
   width: 100vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -25,7 +25,7 @@ h4 {
 }
 
 /*STICKY NAVIGATION BAR*/
-header {
+.navigationbar {
   background-color: rgb(14, 14, 14);
   width: 100vw;
   height: var(--largenavheight);
@@ -37,51 +37,92 @@ header {
   z-index: 1;
 }
 
-.logo {
+.navigationbar__img {
   position: absolute;
   height: 100%;
 }
 
-.navigationbar__a {
+.navigationbar__nav {
   font-weight: 800;
   display: flex;
   flex-direction: row;
   margin-right: 3rem;
 }
 
-.navigationbar__a a {
+.navigationbar__nav a {
   padding: 2vh 1rem;
   transition: border-color 0.15s, box-shadow 0.15s;
   color: rgb(215, 215, 215);
 }
 
-nav a:hover {
+.navigationbar__nav a:hover {
   background-color: rgb(39, 39, 39);
   border-color: #7db0fb;
   color: white;
   box-shadow: 0 0 10px 10px rgba(24, 117, 255, 0.25);
   border-radius: 1rem;
 }
+
+/*HERO*/
+.herowrapper {
+  padding-top: var(
+    --largenavheight
+  ); /*is there a more robust way of doing this? if i change
+  the nav bar size then this doesnt adjust automatically*/
+  text-align: center;
+  font-size: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.hero {
+  background-image: url("../Images/pexels-pixabay-270348.jpg");
+  background-size: cover;
+  background-position: right;
+  height: 40vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.hero__img {
+  max-width: auto;
+  height: 100%;
+}
+
+.hero__div {
+  padding-right: 5vw;
+  padding-bottom: 23vh;
+}
+
+.hero__div h1 {
+  font-weight: 800;
+}
+
+/*MAIN*/
+main {
+  display: flex;
+  flex-direction: row;
+  background: var(--asidebackground);
+}
+
 /*ASIDE QUOTES*/
 aside {
-  flex: 1 1 25%;
+  flex: 1 1 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  text-align: center;
-  height: 100%;
-  background: var(--asidebackground);
 }
 
 .quote {
   flex-direction: column;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 20%;
-  width: 85%;
-  max-width: 60vw;
+  min-height: 10%;
+  max-width: 75%;
   border: 1px solid var(--asidecolor);
   position: relative;
   color: var(--asidecolor);
@@ -94,8 +135,19 @@ aside {
   padding: 0 0.5rem;
   font-size: 2rem;
   position: absolute;
-  top: -11%;
+  top: -15%;
+  align-self: center;
+  justify-self: flex-start;
 }
+
+.quote__p {
+  justify-self: center;
+  align-self: center;
+  font-size: 1.8rem;
+  padding: 2rem;
+  margin-bottom: 0;
+}
+
 .corner {
   height: 30px;
   width: 30px;
@@ -126,66 +178,34 @@ aside {
   right: -16px;
   border-color: var(--asidecolor) transparent transparent transparent;
 }
-.quote__p {
-  font-size: 1.8rem;
-  margin: auto 2rem;
-}
 
-/*HERO*/
-.herowrapper {
-  padding-top: var(
-    --largenavheight
-  ); /*is there a more robust way of doing this? if i change
-  the nav bar size then this doesnt adjust automatically*/
-  text-align: center;
-  font-size: 3rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.hero {
-  height: 40vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-}
-
-.hero__div {
-  padding-right: 5vw;
-  padding-bottom: 23vh;
-}
-
-.hero__div h1 {
-  font-weight: 800;
-}
-
-main {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-}
-
+/*CONTENT*/
 .main__div {
-  flex: 3 3 75%;
+  flex: 2 2 0;
   display: flex;
   flex-direction: column;
 }
 
 #about_me {
-  flex: 1 1 50%;
+  flex: 1.5 1.5 0;
+  margin: 2rem;
   text-align: center;
   background-color: var(--asidebackground);
   display: flex;
   flex-direction: column;
 }
 
+.about_me__p {
+  margin: 1rem 0rem;
+  text-align: left;
+}
+
 #work {
-  flex: 1 1 50%;
+  /*why does this section get really small when i shrink the screen?*/
+  flex: 3 3 0;
+  margin: 2rem 2rem 4rem 2rem;
   text-align: center;
-  background-color: rgb(252, 87, 87);
+  background-color: var(--asidebackground);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -194,9 +214,8 @@ main {
 }
 
 #work .gallery {
-  /*Ideally i would like to center this vertically in the container
-  margin: 3rem 0rem 0rem 64rem;*/
-
+  /*how do i get these to wrap when squished?*/
+  margin: 1rem 2rem;
   width: 40%;
   display: grid;
   grid-template-columns: repeat(3, 102px);
@@ -215,35 +234,14 @@ main {
 footer {
   background-color: black;
   height: 40vh;
-  width: 100vw;
   color: white;
   padding-top: 2vh;
   padding-left: 2vw;
   font-weight: 1000;
 }
 
-/*IMAGES*/
-.hero {
-  background-image: url("../Images/pexels-pixabay-270348.jpg");
-  background-size: cover;
-  background-position: right;
-}
-
-.hero__img {
-  max-width: auto;
-  height: 100%;
-}
-
 /*RESPONSIVE DESIGN: MEDIA QUERIES*/
 @media screen and (max-width: 980px) {
-  .quote__span {
-    font-size: 1.7rem;
-  }
-
-  .quote__p {
-    font-size: 1.5rem;
-    margin: auto 1rem;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -251,16 +249,13 @@ footer {
     scroll-padding-top: var(--smallnavheight);
   }
 
-  header {
+  .navigationbar {
     height: var(--smallnavheight);
-    position: fixed;
     justify-content: center;
     align-items: center;
-    top: 0;
-    left: 0;
   }
 
-  .navigationbar__a {
+  .navigationbar__nav {
     line-height: 1;
     margin-right: 0;
     font-size: 3rem;
@@ -269,16 +264,16 @@ footer {
     text-align: center;
   }
 
-  .logo {
+  .navigationbar__img {
     display: none;
   }
 
-  .navigationbar__a a {
+  .navigationbar__nav a {
     padding: 1vh 0rem;
   }
 
   .herowrapper {
-    padding-top: 25vh;
+    padding-top: var(--smallnavheight);
   }
 
   .hero {
@@ -287,31 +282,27 @@ footer {
 
   .hero__div {
     display: none;
-    padding-right: 0vw;
-    padding-bottom: 0vh;
   }
 
   main {
     display: flex;
     flex-direction: column;
-    height: 200vh;
+  }
+
+  #about_me {
+    margin-top: -1rem;
   }
 
   .main__div {
-    flex: 0 0 75%;
+    flex: 1 1 0;
   }
 
   aside {
-    flex: 0 0 25%;
-    float: none;
-  }
-
-  .quote {
-    height: 30%;
+    min-height: 80vh;
+    flex: 1 1 0;
   }
 
   .quote__span {
-    top: -15%;
     font-size: 1.8rem;
   }
 
