Fixed a display error when querying small screens

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,5 +1,5 @@
-/*site wont deply
-flex shrink and flex basis are confusing*/
+/*flex shrink and flex basis are confusing
+buttons dont go away once i press them*/
 
 html {
   font-size: 62.5%;
@@ -17,6 +17,8 @@ body {
   width: 100vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 /*HEADER CONTROL*/
@@ -204,7 +206,6 @@ aside {
 }
 
 #work {
-  /*why does this section get really small when i shrink the screen?*/
   flex: 3 3 0;
   margin: 2rem 2rem 4rem 2rem;
   text-align: center;
@@ -297,11 +298,11 @@ footer {
   }
 
   .main__div {
-    flex: 1 1 0;
+    flex: 2 2 0;
   }
 
   aside {
-    min-height: 80vh;
+    min-height: 60rem;
     flex: 1 1 0;
   }
 
