Fixed hover bug for mobiles

--- a/Styles/contact_me.css
+++ b/Styles/contact_me.css
@@ -1,7 +1,7 @@
 html {
   font-size: 62.5%;
   scroll-padding-top: 7vh;
-  --smallnavheight: 25vh;
+  --smallnavheight: 30vh;
   --largenavheight: 7vh;
   --asidebackground: white;
   --asidecolor: black;
@@ -46,14 +46,6 @@ body {
   padding: 2vh 1rem;
   transition: border-color 0.15s, box-shadow 0.15s;
   color: rgb(215, 215, 215);
-}
-
-.navigationbar__nav a:hover {
-  background-color: rgb(39, 39, 39);
-  border-color: #7db0fb;
-  color: white;
-  box-shadow: 0 0 10px 10px rgba(24, 117, 255, 0.25);
-  border-radius: 1rem;
 }
 
 .wrapper {
@@ -104,6 +96,24 @@ input[type="text"]:focus {
 }
 
 /*RESPONSIVE DESIGN: MEDIA QUERIES*/
+@media (hover) {
+  /*If the device can hover as its primary pointer, then this will activate*/
+  .navigationbar__nav a:hover {
+    background-color: rgb(39, 39, 39);
+    border-color: #7db0fb;
+    color: white;
+    box-shadow: 0 0 10px 10px rgba(24, 117, 255, 0.25);
+    border-radius: 2rem;
+  }
+  .navigationbar__nav a:visited {
+    background-color: rgb(14, 14, 14);
+    border-color: rgb(14, 14, 14);
+    color: rgb(215, 215, 215);
+    box-shadow: rgb(14, 14, 14);
+    border-radius: 0rem;
+  }
+}
+
 @media screen and (max-width: 980px) {
 }
 
