--- a/Styles/index.css
+++ b/Styles/index.css
@@ -52,10 +52,11 @@ h4 {
   display: flex;
   flex-direction: row;
   margin-right: 3rem;
+  align-items: center;
 }
 
 .navigationbar__nav a {
-  padding: 2vh 1rem;
+  padding: 0 1rem;
   transition: border-color 0.15s, box-shadow 0.15s;
   color: rgb(215, 215, 215);
 }
@@ -225,6 +226,24 @@ aside {
 .box-one {
   grid-column: 1/3;
   grid-row: 1/3;
+}
+
+div .box-one {
+  background-image: url(../Images/PreworkStudyGuide.JPG);
+  background-size: cover;
+  background-position: center;
+}
+
+div .box-two {
+  background-image: url(../Images/multiplicationapp.JPG);
+  background-size: cover;
+  background-position: center;
+}
+
+div .box-three {
+  background-image: url(../Images/digitalclock.JPG);
+  background-size: cover;
+  background-position: center;
 }
 
 /*FOOTER*/
