--- a/Styles/contact_me.css
+++ b/Styles/contact_me.css
@@ -12,7 +12,7 @@ body {
   font-size: 2rem;
   margin: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -22,14 +22,14 @@ h1,
 h2,
 h3,
 h4 {
-  margin: 0;
+  margin: 2rem;
 }
 
 /*STICKY NAVIGATION BAR*/
 .navigationbar {
   background-color: rgb(14, 14, 14);
   width: 100vw;
-  height: var(--largenavheight);
+  min-height: var(--largenavheight);
   position: fixed;
   display: flex;
   justify-content: space-between;
@@ -96,12 +96,11 @@ h4 {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  padding-top: 10vh;
 }
 
 form {
-  width: 55%;
-  padding: 2rem;
+  min-width: 55%;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -120,7 +119,7 @@ button:hover {
 }
 
 textarea[type="message"] {
-  height: 40vh;
+  min-height: 30rem;
 }
 
 input[type="email"],
@@ -149,7 +148,7 @@ textarea[type="text"]:focus {
   }
 
   .navigationbar {
-    height: var(--smallnavheight);
+    min-height: var(--smallnavheight);
     justify-content: center;
     align-items: center;
   }
