--- a/Styles/index.css
+++ b/Styles/index.css
@@ -35,7 +35,7 @@ h4 {
 .navigationbar {
   background-color: rgb(14, 14, 14);
   width: 100vw;
-  height: var(--largenavheight);
+  min-height: var(--largenavheight);
   position: fixed;
   display: flex;
   justify-content: space-between;
@@ -105,6 +105,7 @@ main {
   display: flex;
   flex-direction: row;
   background: var(--asidebackground);
+  min-height: 110vh;
 }
 
 /*ASIDE QUOTES*/
@@ -120,7 +121,7 @@ aside {
 .quote {
   flex-direction: column;
   display: flex;
-  min-height: 10%;
+  min-height: 13%;
   max-width: 80%;
   border: 1px solid var(--asidecolor);
   position: relative;
@@ -218,7 +219,7 @@ ul {
 
 #work {
   flex: 3 3 0;
-  margin: 2rem;
+  margin: 0rem 2rem;
   text-align: center;
   background-color: var(--asidebackground);
   display: flex;
@@ -229,14 +230,15 @@ ul {
 }
 
 #work .gallery {
-  margin: 1rem 2rem;
+  margin: 1rem;
   width: 90%;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: repeat(4, 100px);
   justify-content: center;
   align-content: center;
-  gap: 3rem;
+  gap: 5rem;
+  margin-bottom: 4rem;
 }
 
 .box span {
@@ -244,43 +246,43 @@ ul {
 }
 
 .box {
-  background: blue;
   color: white;
-  border: 0.2rem solid black;
+  border: 1px solid black;
   border-radius: 1rem;
   box-shadow: 0.4rem 0.4rem 0.5rem rgba(0, 0, 0, 0.9);
+  background-size: cover;
+  background-position: center;
+  min-height: 10rem;
 }
 
 .box-one {
+  background-image: url(../Images/PreworkStudyGuide.JPG);
   grid-column: 1/3;
   grid-row: 1/3;
 }
 
-div .box-one {
-  background-image: url(../Images/PreworkStudyGuide.JPG);
-  background-size: cover;
-  background-position: center;
-}
-
-div .box-two {
+.box-two {
   background-image: url(../Images/multiplicationapp.JPG);
-  background-size: cover;
-  background-position: center;
 }
 
-div .box-three {
+.box-three {
   background-image: url(../Images/digitalclock.JPG);
-  background-size: cover;
-  background-position: center;
+}
+
+.box-four {
+  background-image: url(../Images/ripplebutton.JPG);
+}
+
+.box-five {
+  background-image: url(../Images/charactercounter.JPG);
 }
 
 /*FOOTER*/
 footer {
   background-color: black;
-  height: 40vh;
+  min-height: 30vh;
   color: white;
-  padding-top: 2vh;
-  padding-left: 2vw;
+  padding: 4rem;
   font-weight: 1000;
 }
 
@@ -364,7 +366,7 @@ footer a {
     left: var(--leftPos);
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    transition: width 2s, height 2s;
+    transition: width 0.25s, height 0.25s;
   }
 
   .btn1:hover::before {
@@ -383,7 +385,7 @@ footer a {
 
 @media screen and (max-width: 980px) {
   #work .gallery {
-    width: 80%;
+    width: 90%;
     grid-template-columns: 100%;
     grid-template-rows: repeat(6, 100px);
   }
@@ -416,7 +418,7 @@ footer a {
   }
 
   .navigationbar {
-    height: var(--smallnavheight);
+    min-height: var(--smallnavheight);
     justify-content: center;
     align-items: center;
   }
