Added Heart Trail app to gallery

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -270,7 +270,7 @@ ul {
 }
 
 .box-four {
-  background-image: url(../Images/ripplebutton.JPG);
+  background-image: url(../Images/hearttrail.JPG);
 }
 
 .box-five {
