Added MealMate to the portfolio and replaced Prework Study Guide

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -256,7 +256,7 @@ ul {
 }
 
 .box-one {
-  background-image: url(../Images/PreworkStudyGuide.JPG);
+  background-image: url(../Images/mealmate.JPG);
   grid-column: 1/3;
   grid-row: 1/3;
 }
